@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,12 +15,13 @@ package org.openhab.binding.dmx.internal.handler;
 import static org.openhab.binding.dmx.internal.DmxBindingConstants.THING_TYPE_SACN_BRIDGE;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Set;
 import java.util.UUID;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.dmx.internal.config.SacnBridgeHandlerConfiguration;
 import org.openhab.binding.dmx.internal.dmxoverethernet.DmxOverEthernetHandler;
+import org.openhab.binding.dmx.internal.dmxoverethernet.DmxOverEthernetPacket;
 import org.openhab.binding.dmx.internal.dmxoverethernet.IpNode;
 import org.openhab.binding.dmx.internal.dmxoverethernet.SacnNode;
 import org.openhab.binding.dmx.internal.dmxoverethernet.SacnPacket;
@@ -37,8 +38,9 @@ import org.slf4j.LoggerFactory;
  *
  * @author Jan N. Klug - Initial contribution
  */
+@NonNullByDefault
 public class SacnBridgeHandler extends DmxOverEthernetHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_SACN_BRIDGE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_SACN_BRIDGE);
     public static final int MIN_UNIVERSE_ID = 1;
     public static final int MAX_UNIVERSE_ID = 63999;
 
@@ -55,6 +57,11 @@ public class SacnBridgeHandler extends DmxOverEthernetHandler {
         SacnBridgeHandlerConfiguration configuration = getConfig().as(SacnBridgeHandlerConfiguration.class);
 
         setUniverse(configuration.universe, MIN_UNIVERSE_ID, MAX_UNIVERSE_ID);
+        DmxOverEthernetPacket packetTemplate = this.packetTemplate;
+        if (packetTemplate == null) {
+            packetTemplate = new SacnPacket(senderUUID);
+            this.packetTemplate = packetTemplate;
+        }
         packetTemplate.setUniverse(universe.getUniverseId());
 
         receiverNodes.clear();
