@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,6 +18,7 @@ import static org.openhab.binding.vesync.internal.dto.requests.VeSyncProtocolCon
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -56,16 +57,34 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
 
+    public static final String DEV_TYPE_FAMILY_AIR_PURIFIER = "LAP";
+
     public static final int DEFAULT_AIR_PURIFIER_POLL_RATE = 120;
-    // "Device Type" values
-    public static final String DEV_TYPE_CORE_600S = "LAP-C601S-WUS";
-    public static final String DEV_TYPE_CORE_400S = "Core400S";
-    public static final String DEV_TYPE_CORE_300S = "Core300S";
-    public static final String DEV_TYPE_CORE_201S = "LAP-C201S-AUSR";
-    public static final String DEV_TYPE_CORE_200S = "Core200S";
-    public static final String DEV_TYPE_LV_PUR131S = "LV-PUR131S";
-    public static final List<String> SUPPORTED_DEVICE_TYPES = Arrays.asList(DEV_TYPE_CORE_600S, DEV_TYPE_CORE_400S,
-            DEV_TYPE_CORE_300S, DEV_TYPE_CORE_201S, DEV_TYPE_CORE_200S, DEV_TYPE_LV_PUR131S);
+
+    public static final String DEV_FAMILY_CORE_200S = "200S";
+    public static final String DEV_FAMILY_CORE_300S = "300S";
+    public static final String DEV_FAMILY_CORE_400S = "400S";
+    public static final String DEV_FAMILY_CORE_600S = "600S";
+
+    public static final String DEV_FAMILY_PUR_131S = "131S";
+
+    public static final VeSyncDeviceMetadata CORE200S = new VeSyncDeviceMetadata(DEV_FAMILY_CORE_200S,
+            Arrays.asList("C201S", "C202S"), List.of("Core200S"));
+
+    public static final VeSyncDeviceMetadata CORE300S = new VeSyncDeviceMetadata(DEV_FAMILY_CORE_300S,
+            List.of("C301S", "C302S"), List.of("Core300S"));
+
+    public static final VeSyncDeviceMetadata CORE400S = new VeSyncDeviceMetadata(DEV_FAMILY_CORE_400S, List.of("C401S"),
+            List.of("Core400S"));
+
+    public static final VeSyncDeviceMetadata CORE600S = new VeSyncDeviceMetadata(DEV_FAMILY_CORE_600S, List.of("C601S"),
+            List.of("Core600S"));
+
+    public static final VeSyncDeviceMetadata PUR131S = new VeSyncDeviceMetadata(DEV_FAMILY_PUR_131S,
+            Collections.emptyList(), Arrays.asList("LV-PUR131S", "LV-RH131S"));
+
+    public static final List<VeSyncDeviceMetadata> SUPPORTED_MODEL_FAMILIES = Arrays.asList(CORE600S, CORE400S,
+            CORE300S, CORE200S, PUR131S);
 
     private static final List<String> CORE_400S600S_FAN_MODES = Arrays.asList(MODE_AUTO, MODE_MANUAL, MODE_SLEEP);
     private static final List<String> CORE_200S300S_FAN_MODES = Arrays.asList(MODE_MANUAL, MODE_SLEEP);
@@ -89,15 +108,15 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
 
     @Override
     protected @NotNull String[] getChannelsToRemove() {
+        final String deviceFamily = getThing().getProperties().get(DEVICE_PROP_DEVICE_FAMILY);
         String[] toRemove = new String[] {};
-        final String deviceType = getThing().getProperties().get(DEVICE_PROP_DEVICE_TYPE);
-        if (deviceType != null) {
-            switch (deviceType) {
-                case DEV_TYPE_CORE_600S:
-                case DEV_TYPE_CORE_400S:
+        if (deviceFamily != null) {
+            switch (deviceFamily) {
+                case DEV_FAMILY_CORE_600S:
+                case DEV_FAMILY_CORE_400S:
                     toRemove = new String[] { DEVICE_CHANNEL_AF_NIGHT_LIGHT };
                     break;
-                case DEV_TYPE_LV_PUR131S:
+                case DEV_FAMILY_PUR_131S:
                     toRemove = new String[] { DEVICE_CHANNEL_AF_NIGHT_LIGHT, DEVICE_CHANNEL_AF_CONFIG_AUTO_ROOM_SIZE,
                             DEVICE_CHANNEL_AF_CONFIG_AUTO_MODE_PREF, DEVICE_CHANNEL_AF_AUTO_OFF_CALC_TIME,
                             DEVICE_CHANNEL_AIR_FILTER_LIFE_PERCENTAGE_REMAINING, DEVICE_CHANNEL_AIRQUALITY_PM25,
@@ -130,18 +149,19 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
     }
 
     @Override
-    protected boolean isDeviceSupported() {
-        final String deviceType = getThing().getProperties().get(DEVICE_PROP_DEVICE_TYPE);
-        if (deviceType == null) {
-            return false;
-        }
-        return SUPPORTED_DEVICE_TYPES.contains(deviceType);
+    public String getDeviceFamilyProtocolPrefix() {
+        return DEV_TYPE_FAMILY_AIR_PURIFIER;
+    }
+
+    @Override
+    public List<VeSyncDeviceMetadata> getSupportedDeviceMetadata() {
+        return SUPPORTED_MODEL_FAMILIES;
     }
 
     @Override
     public void handleCommand(final ChannelUID channelUID, final Command command) {
-        final String deviceType = getThing().getProperties().get(DEVICE_PROP_DEVICE_TYPE);
-        if (deviceType == null) {
+        final String deviceFamily = getThing().getProperties().get(DEVICE_PROP_DEVICE_FAMILY);
+        if (deviceFamily == null) {
             return;
         }
 
@@ -167,9 +187,9 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
                 switch (channelUID.getId()) {
                     case DEVICE_CHANNEL_FAN_MODE_ENABLED:
                         final String targetFanMode = command.toString().toLowerCase();
-                        switch (deviceType) {
-                            case DEV_TYPE_CORE_600S:
-                            case DEV_TYPE_CORE_400S:
+                        switch (deviceFamily) {
+                            case DEV_FAMILY_CORE_600S:
+                            case DEV_FAMILY_CORE_400S:
                                 if (!CORE_400S600S_FAN_MODES.contains(targetFanMode)) {
                                     logger.warn(
                                             "Fan mode command for \"{}\" is not valid in the (Core400S) API possible options {}",
@@ -177,9 +197,8 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
                                     return;
                                 }
                                 break;
-                            case DEV_TYPE_CORE_200S:
-                            case DEV_TYPE_CORE_201S:
-                            case DEV_TYPE_CORE_300S:
+                            case DEV_FAMILY_CORE_200S:
+                            case DEV_FAMILY_CORE_300S:
                                 if (!CORE_200S300S_FAN_MODES.contains(targetFanMode)) {
                                     logger.warn(
                                             "Fan mode command for \"{}\" is not valid in the (Core200S/Core300S) API possible options {}",
@@ -194,14 +213,13 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
                         break;
                     case DEVICE_CHANNEL_AF_NIGHT_LIGHT:
                         final String targetNightLightMode = command.toString().toLowerCase();
-                        switch (deviceType) {
-                            case DEV_TYPE_CORE_600S:
-                            case DEV_TYPE_CORE_400S:
+                        switch (deviceFamily) {
+                            case DEV_FAMILY_CORE_600S:
+                            case DEV_FAMILY_CORE_400S:
                                 logger.warn("Core400S API does not support night light");
                                 return;
-                            case DEV_TYPE_CORE_200S:
-                            case DEV_TYPE_CORE_201S:
-                            case DEV_TYPE_CORE_300S:
+                            case DEV_FAMILY_CORE_200S:
+                            case DEV_FAMILY_CORE_300S:
                                 if (!CORE_200S300S_NIGHT_LIGHT_MODES.contains(targetNightLightMode)) {
                                     logger.warn(
                                             "Night light mode command for \"{}\" is not valid in the (Core200S/Core300S) API possible options {}",
@@ -229,18 +247,17 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
                             requestedLevel = 1;
                         }
 
-                        switch (deviceType) {
-                            case DEV_TYPE_CORE_600S:
-                            case DEV_TYPE_CORE_400S:
+                        switch (deviceFamily) {
+                            case DEV_FAMILY_CORE_600S:
+                            case DEV_FAMILY_CORE_400S:
                                 if (requestedLevel > 4) {
                                     logger.warn(
                                             "Fan speed command greater than 4 - adjusting to 4 as the valid (Core400S) API value");
                                     requestedLevel = 4;
                                 }
                                 break;
-                            case DEV_TYPE_CORE_200S:
-                            case DEV_TYPE_CORE_201S:
-                            case DEV_TYPE_CORE_300S:
+                            case DEV_FAMILY_CORE_200S:
+                            case DEV_FAMILY_CORE_300S:
                                 if (requestedLevel > 3) {
                                     logger.warn(
                                             "Fan speed command greater than 3 - adjusting to 3 as the valid (Core200S/Core300S) API value");
@@ -264,20 +281,19 @@ public class VeSyncDeviceAirPurifierHandler extends VeSyncBaseDeviceHandler {
 
     @Override
     protected void pollForDeviceData(final ExpiringCache<String> cachedResponse) {
-        final String deviceType = getThing().getProperties().get(DEVICE_PROP_DEVICE_TYPE);
-        if (deviceType == null) {
+        final String deviceFamily = getThing().getProperties().get(DEVICE_PROP_DEVICE_FAMILY);
+        if (deviceFamily == null) {
             return;
         }
 
-        switch (deviceType) {
-            case DEV_TYPE_CORE_600S:
-            case DEV_TYPE_CORE_400S:
-            case DEV_TYPE_CORE_300S:
-            case DEV_TYPE_CORE_201S:
-            case DEV_TYPE_CORE_200S:
+        switch (deviceFamily) {
+            case DEV_FAMILY_CORE_600S:
+            case DEV_FAMILY_CORE_400S:
+            case DEV_FAMILY_CORE_300S:
+            case DEV_FAMILY_CORE_200S:
                 processV2BypassPoll(cachedResponse);
                 break;
-            case DEV_TYPE_LV_PUR131S:
+            case DEV_FAMILY_PUR_131S:
                 processV1AirPurifierPoll(cachedResponse);
                 break;
         }
